Create a new window object to hold "windows" in the UX.

--- a/src/css/slick-default-theme.css
+++ b/src/css/slick-default-theme.css
@@ -16,7 +16,7 @@ classes should alter those!
 }
 
 .slick-header-column:hover, .slick-header-column-active {
-    background: white url('../images/header-columns-over-bg.gif') repeat-x center bottom;
+    background: white url('../../lib/SlickGrid/images/header-columns-over-bg.gif') repeat-x center bottom;
 }
 
 .slick-headerrow {
