--- a/src/css/listview.css
+++ b/src/css/listview.css
@@ -5,6 +5,17 @@
     font-size: 8pt;
 }
 
+body {
+  background: beige;
+  padding: 0;
+  margin: 8;
+}
+
+h2 {
+  font-size: 10pt;
+  border-bottom: 1px dotted gray;
+}
+
 ul {
     margin-left: 0;
     padding: 0;
@@ -12,7 +23,7 @@ ul {
 }
 
 li {
-    background: url("../lib/SlickGrid/images/arrow_right_spearmint.png") no-repeat center left;
+  background: url("../images/arrow_right_spearmint.png") no-repeat center left;
     padding: 0 0 0 14px;
 
     list-style: none;
@@ -29,7 +40,7 @@ li {
 	border: 1px solid gray;
 	border-bottom: 0;
 	border-top: 0;
-	background: url('../lib/SlickGrid/images/header-bg.gif') repeat-x center top;
+  background: url('../images/header-bg.gif') repeat-x center top;
 	color: black;
 	height: 24px;
 	line-height: 24px;
@@ -119,8 +130,7 @@ li {
 	-webkit-border-radius: 3px;
 }
 
-
-/* TextCellEditor, DateCellEditor */
+/* Slick.Editors.Text, Slick.Editors.Date */
 input.editor-text {
 	width: 100%;
 	height: 100%;
@@ -138,7 +148,7 @@ input.editor-text {
 	vertical-align: top;
 }
 
-/* PercentCompleteCellEditor */
+/* Slick.Editors.PercentComplete */
 input.editor-percentcomplete {
 	width: 100%;
 	height: 100%;
@@ -156,7 +166,7 @@ input.editor-percentcomplete {
     display: inline-block;
     width: 16px;
     height: 100%;
-    background: url("../../lib/SlickGrid/images/pencil.gif") no-repeat center center;
+  background: url("../images/pencil.gif") no-repeat center center;
 	overflow: visible;
 	z-index: 1000;
 	float: right;
@@ -167,7 +177,7 @@ input.editor-percentcomplete {
     position: absolute;
     top: -2px;
     left: -9px;
-    background: url("../../lib/SlickGrid/images/editor-helper-bg.gif") no-repeat top left;
+  background: url("../images/editor-helper-bg.gif") no-repeat top left;
     padding-left: 9px;
 
     width: 120px;
@@ -208,16 +218,14 @@ input.editor-percentcomplete {
 	display: block;
 }
 
-
-
-/* YesNoSelectCellEditor */
+/* Slick.Editors.YesNoSelect */
 select.editor-yesno {
 	width: 100%;
 	margin: 0;
 	vertical-align: middle;		
 }
 
-/* YesNoCheckboxCellEditor */
+/* Slick.Editors.Checkbox */
 input.editor-checkbox {
 	margin: 0;
 	height: 100%;
