switch to 0.10.0 ui-bootstrap and utilize modal instead of old dialog

--- a/src/html/partials/dialog.html
+++ b/src/html/partials/dialog.html
@@ -9,7 +9,7 @@
 </div>
 <div class="modal-footer">
     <button type="button" class="btn"
-            data-ng-click="dialogOptions.close()">{{dialogOptions.closeButtonText}}</button>
+            ng-click="cancel()">{{dialogOptions.closeButtonText}}</button>
     <button class="btn btn-primary"
-            data-ng-click="dialogOptions.callback();">{{dialogOptions.actionButtonText}}</button>
+            ng-click="ok()">{{dialogOptions.actionButtonText}}</button>
 </div>
