--- a/src/html/partials/missing-router.html
+++ b/src/html/partials/missing-router.html
@@ -1,4 +1,4 @@
-<!-- missing-aisle.html file -->
-<div id='instructions'>
+<!-- missing-router.html file -->
+<div ng-controller="MissingRouterCtrl">
 <h3>Missing a router case</h3>
 </div>
