--- a/src/html/partials/aisle-editor.html
+++ b/src/html/partials/aisle-editor.html
@@ -3,24 +3,64 @@
     <h3>Create Aisle</h3>
 </div>
 <div class="modal-body">
-  <div class="alert alert-danger" ng-repeat="msg in aisleForm.messages">{{msg}}</div>
+	<div class="alert alert-danger" ng-repeat="msg in aisleForm.messages">{{msg}}</div>
     <div id='instructions'>
         Describe the bays on this aisle.  (You can adjust the oddballs later.)
     </div>
     <br>
-    <div class='dialogFields modal-dialog-content'>
-        <table>
-            <tr><td>Aisle ID: </td><td><input id='aisleId' class='aisleId' label='' autofocus ng-model="aisleForm.aisleId"/></td></tr>
-            <tr><td>Bay Height: </td><td><input id='bayHeight' class='bayHeight' label='Feet' placeholder="Feet" ng-model="aisleForm.bayHeight"/></td></tr>
-            <tr><td>Bay Width: </td><td><input id='bayWidth' class='bayWidth' label='Feet' placeholder="Feet" ng-model="aisleForm.bayWidth"/></td></tr>
-            <tr><td>Bay Depth: </td><td><input id='bayDepth' class='bayDepth' label='Feet' placeholder="Feet" ng-model="aisleForm.bayDepth"/></td></tr>
-            <tr><td>Bays High: </td><td><input id='baysHigh' class='baysHigh' label='Num' placeholder="Num" ng-model="aisleForm.baysHigh"/></td></tr>
-            <tr><td>Bays Long: </td><td><input id='baysLong' class='baysLong' label='Num' placeholder="Num" ng-model="aisleForm.baysLong"/></td></tr>
-            <tr><td>Controller ID: </td><td><input id='controllerId' class='controllerId' label='ID' placeholder="ID" ng-model="aisleForm.controllerId"/></td></tr>
-        </table>
-        <br>
-        <div>Left Hand Bay: <input id="isLeftHandBay" type="checkbox" class="isLeftHandBay" ng-model="aisleForm.isLeftHandBay" value="true"  ng-true-value="true" ng-false-value="false"></div>
-    </div>
+	<form class="form-horizontal" role="form">
+		<div class="form-group">
+  			<label for="organizationIdInput" class="col-sm-4 control-label">Aisle ID: </label>
+			<div class="col-sm-8">
+	  			<input type="text" required id="aisleId" class='form-control' autocomplete='on' autofocus ng-model="aisleForm.aisleId" />
+			</div>
+		</div>
+		<div class="form-group">
+  			<label for="organizationIdInput" class="col-sm-4 control-label">Bay Height: </label>
+			<div class="col-sm-8">
+	  			<input type="text" required id="aisleId" class='form-control' autocomplete='on' autofocus ng-model="aisleForm.bayHeight" />
+			</div>
+		</div>
+  <div class="form-group">
+	  <label for="organizationIdInput" class="col-sm-4 control-label">Bay Width: </label>
+	  <div class="col-sm-8">
+		   <input type="text" required id="aisleId" class='form-control' autocomplete='on' autofocus ng-model="aisleForm.bayWidth" />
+	  </div>
+  </div>
+  <div class="form-group">
+	  <label for="organizationIdInput" class="col-sm-4 control-label">Bay Depth: </label>
+	  <div class="col-sm-8">
+		   <input type="text" required id="aisleId" class='form-control' autocomplete='on' autofocus ng-model="aisleForm.bayDepth" />
+	  </div>
+  </div>
+  <div class="form-group">
+	  <label for="organizationIdInput" class="col-sm-4 control-label">Bays High: </label>
+	  <div class="col-sm-8">
+		   <input type="text" required id="aisleId" class='form-control' autocomplete='on' autofocus ng-model="aisleForm.baysHigh" />
+	  </div>
+  </div>
+  <div class="form-group">
+	  <label for="organizationIdInput" class="col-sm-4 control-label">Bays Long: </label>
+	  <div class="col-sm-8">
+		   <input type="text" required id="aisleId" class='form-control' autocomplete='on' autofocus ng-model="aisleForm.baysLong" placeholder="Feet" />
+	  </div>
+  </div>
+  <div class="form-group">
+	  <label for="organizationIdInput" class="col-sm-4 control-label">Controller ID: </label>
+	  <div class="col-sm-8">
+		   <input type="text" required id="aisleId" class='form-control' autocomplete='on' autofocus ng-model="aisleForm.controllerId" />
+	  </div>
+  </div>
+  <div class="form-group">
+	  <div class="col-sm-offset-4 col-sm-8">
+		  <div class="checkbox">
+			  <label>
+				  <input type="checkbox" id="isLeftHandBay" ng-model="aisleForm.isLeftHandBay" value="true"	 ng-true-value="true" ng-false-value="false" /> Left Hand Bay
+			  </label>
+		  </div>
+	  </div>
+  </div>
+	</form>
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="ok()">OK</button>
