--- a/src/html/partials/aisle-editor.html
+++ b/src/html/partials/aisle-editor.html
@@ -18,13 +18,13 @@
 		<div class="form-group">
   			<label for="organizationIdInput" class="col-sm-4 control-label">Bay Height: </label>
 			<div class="col-sm-8">
-	  			<input type="text" required id="aisleId" class='form-control' autocomplete='on' autofocus ng-model="aisleForm.bayHeight" />
+	  			<input type="text" required id="aisleId" class='form-control' autocomplete='on' autofocus ng-model="aisleForm.bayHeight" placeholder="Feet"/>
 			</div>
 		</div>
   <div class="form-group">
 	  <label for="organizationIdInput" class="col-sm-4 control-label">Bay Width: </label>
 	  <div class="col-sm-8">
-		   <input type="text" required id="aisleId" class='form-control' autocomplete='on' autofocus ng-model="aisleForm.bayWidth" />
+		   <input type="text" required id="aisleId" class='form-control' autocomplete='on' autofocus ng-model="aisleForm.bayWidth" placeholder="Feet"/>
 	  </div>
   </div>
   <div class="form-group">
@@ -36,19 +36,19 @@
   <div class="form-group">
 	  <label for="organizationIdInput" class="col-sm-4 control-label">Bays High: </label>
 	  <div class="col-sm-8">
-		   <input type="text" required id="aisleId" class='form-control' autocomplete='on' autofocus ng-model="aisleForm.baysHigh" />
+		   <input type="text" required id="aisleId" class='form-control' autocomplete='on' autofocus ng-model="aisleForm.baysHigh" placeholder="Feet" />
 	  </div>
   </div>
   <div class="form-group">
 	  <label for="organizationIdInput" class="col-sm-4 control-label">Bays Long: </label>
 	  <div class="col-sm-8">
-		   <input type="text" required id="aisleId" class='form-control' autocomplete='on' autofocus ng-model="aisleForm.baysLong" placeholder="Feet" />
+		   <input type="text" required id="aisleId" class='form-control' autocomplete='on' autofocus ng-model="aisleForm.baysLong" placeholder="Num" />
 	  </div>
   </div>
   <div class="form-group">
 	  <label for="organizationIdInput" class="col-sm-4 control-label">Controller ID: </label>
 	  <div class="col-sm-8">
-		   <input type="text" required id="aisleId" class='form-control' autocomplete='on' autofocus ng-model="aisleForm.controllerId" />
+		   <input type="text" required id="aisleId" class='form-control' autocomplete='on' autofocus ng-model="aisleForm.controllerId" placeholder="Num" />
 	  </div>
   </div>
   <div class="form-group">
