Change CHE controller ID and che name

--- a/src/html/partials/change-che.html
+++ b/src/html/partials/change-che.html
@@ -11,7 +11,9 @@
 		</div>
 		<!-- web examples show adding ng-controller="thisLinkCtrl", but that kills the ok,cancel button action -->
 
-        New Description: <input type="text" name="input" ng-model="che.description">
+		<p>CHE Name: <input type="text" name="input" ng-model="che.domainid"></p>
+		<p>Description: <input type="text" name="input" ng-model="che.description"></p>
+		<p>Controller ID: <input type="text" name="input" ng-model="che.cntrlrid"></p>
 	</div>
 
 	<div class="modal-footer">
