--- a/src/html/partials/change-led-id.html
+++ b/src/html/partials/change-led-id.html
@@ -3,7 +3,7 @@
 
 -->
 <div class="modal-header">
-    <h3>Change Controller ID</h3>
+    <h3>Change LED Controller ID</h3>
 </div>
 <div class="modal-body">
      <div id='instructions'>
@@ -12,13 +12,13 @@
          <p>Format must be similar to this example "0x000014".
       </div>
     <!-- web examples show adding ng-controller="thisLinkCtrl", but that kills the ok,cancel button action -->
-    <form name="controller_id">
-        New ID: <input type="text" name="input" ng-model="controller_id">
+    <form name="change_led_controller_id">
+        New ID: <input type="text" name="input" ng-model="ledcontroller.led_controller_id">
     </form>
 </div>
 
 <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">Save</button>
-    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+	<button class="btn btn-primary" ng-click="controller.ok()">Save</button>
+	<button class="btn btn-warning" ng-click="controller.cancel()">Cancel</button>
 </div>
 
