--- a/src/html/partials/aisle-editor.html
+++ b/src/html/partials/aisle-editor.html
@@ -63,7 +63,6 @@
     </form>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">OK</button>
-    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+    <button class="btn btn-primary" ng-click="controller.ok()">OK</button>
+    <button class="btn btn-warning" ng-click="controller.cancel()">Cancel</button>
 </div>
-
