--- a/src/html/partials/change-item.html
+++ b/src/html/partials/change-item.html
@@ -9,6 +9,12 @@
 			<p>Enter item information.</p>
 		</div>
         <div class="form-group">
+            <label for="" class="col-sm-4 control-label">Sku: </label>
+            <div class="col-sm-8">
+                <span>{{item.sku}}:</span> <span>{{item.description}}</span>
+            </div>
+        </div>
+        <div class="form-group">
             <label for="" class="col-sm-4 control-label">Location Alias: </label>
             <div class="col-sm-8">
                 <input type="text" required id="locationAlias" class='form-control' autocomplete='on' autofocus ng-model="item.locationAlias" />
