--- a/src/html/partials/change-item.html
+++ b/src/html/partials/change-item.html
@@ -3,7 +3,11 @@
 		<h3>Change Item</h3>
 	</div>
 	<div class="modal-body">
-		<div class="alert alert-danger" ng-repeat="msg in form.messages">{{msg}}</div>
+		<div class="alert alert-danger" ng-repeat="globalError in response.errors.globalErrors">{{globalError.message}}</div>
+		<div class="alert alert-danger" ng-repeat="(field, fieldErrors) in response.errors.fieldErrors">
+			{{field}}:
+			<div ng-repeat="fieldError in fieldErrors">{{fieldError.message}}</div>
+		</div>
 		<div id='instructions'>
 			<!-- forcing separate lines on these instructions-->
 			<p>Enter item information.</p>
@@ -17,19 +21,19 @@
         <div class="form-group">
             <label for="" class="col-sm-4 control-label">Location Alias: </label>
             <div class="col-sm-8">
-                <input type="text" required id="locationAlias" class='form-control' autocomplete='on' autofocus ng-model="item.locationAlias" />
+                <input type="text" id="locationAlias" class='form-control' autocomplete='on' autofocus ng-model="item.locationAlias" />
             </div>
         </div>
         <div class="form-group">
             <label for="organizationIdInput" class="col-sm-4 control-label">CM From Left: </label>
             <div class="col-sm-8">
-                <input type="text" required id="cmFromLeft" class='form-control' autocomplete='on' autofocus ng-model="item.cmFromLeft" />
+                <input type="text"  id="cmFromLeft" class='form-control' autocomplete='on' autofocus ng-model="item.cmFromLeft" />
             </div>
         </div>
         <div class="form-group">
             <label for="organizationIdInput" class="col-sm-4 control-label">Unit Of Measure: </label>
             <div class="col-sm-8">
-                <input type="text" required id="uom" class='form-control' autocomplete='on' autofocus ng-model="item.uom" />
+                <input type="text"  id="uom" class='form-control' autocomplete='on' autofocus ng-model="item.uom" />
             </div>
         </div>
 	</div>
