--- a/src/html/partials/change-che.html
+++ b/src/html/partials/change-che.html
@@ -15,9 +15,8 @@
 		<p>Description: <input type="text" name="input" ng-model="che.description"></p>
 		<p>Controller ID: <input type="text" name="input" ng-model="che.cntrlrid"></p>
 	</div>
-
 	<div class="modal-footer">
+		<button class="btn" ng-click="controller.cancel()">Cancel</button>
 		<button class="btn btn-primary" ng-click="controller.ok()">Save</button>
-		<button class="btn btn-warning" ng-click="controller.cancel()">Cancel</button>
 	</div>
 </form>
