--- a/src/html/partials/change-led-id.html
+++ b/src/html/partials/change-led-id.html
@@ -18,7 +18,6 @@
 </div>
 
 <div class="modal-footer">
+	<button class="btn" ng-click="controller.cancel()">Cancel</button>
 	<button class="btn btn-primary" ng-click="controller.ok()">Save</button>
-	<button class="btn btn-warning" ng-click="controller.cancel()">Cancel</button>
 </div>
-
