--- a/src/html/partials/setup-che.html
+++ b/src/html/partials/setup-che.html
@@ -17,7 +17,7 @@
 	</div>
 
 	<div class="modal-footer">
+		<button class="btn " ng-click="controller.cancel()">Cancel</button>
 		<button class="btn btn-primary" ng-click="controller.ok()">Save</button>
-		<button class="btn btn-warning" ng-click="controller.cancel()">Cancel</button>
 	</div>
 </form>
