Allow the deafult network channel to be changed from the UI

--- a/src/html/partials/set-facility-name.html
+++ b/src/html/partials/set-facility-name.html
@@ -15,8 +15,9 @@
 			<p>If you change Domain ID later, it will change your dropbox configuration, and may have other impacts. A change to Facility Full Name will not matter, unless there are add-on reporting and data extractions that care.</p>
 		</div>
 
-		<p>Domain ID: <input type="text" name="input" ng-model="facility.domainid"></p>
+		<p>Domain ID: <input type="text" name="input" ng-model="facility.domainId"></p>
 		<p>Facility Full Name: <input type="text" name="input" ng-model="facility.description"></p>
+		<p>Primary Radio Channel: <input type="text" name="input" ng-model="facility.primaryChannel"></p>
 	</div>
 
 	<div class="modal-footer">
