--- a/src/html/partials/change-che.html
+++ b/src/html/partials/change-che.html
@@ -11,9 +11,19 @@
 		</div>
 		<!-- web examples show adding ng-controller="thisLinkCtrl", but that kills the ok,cancel button action -->
 
-		<p>CHE Name: <input type="text" name="input" ng-model="che.domainid"></p>
-		<p>Description: <input type="text" name="input" ng-model="che.description"></p>
-		<p>Controller ID: <input type="text" name="input" ng-model="che.cntrlrid"></p>
+		<p>CHE Name: <input type="text" name="domainid" ng-model="che.domainid"></p>
+		<p>Description: <input type="text" name="description" ng-model="che.description"></p>
+		<p>Color: <select name="color" ng-model="che.color">
+				<option value="RED">RED</option>
+				<option value="GREEN">GREEN</option>
+				<option value="BLUE">BLUE</option>
+				<option value="MAGENTA">MAGENTA</option>
+				<option value="CYAN">CYAN</option>
+				<option value="ORANGE">ORANGE</option>
+				<option value="BLACK">BLACK</option>
+				<option value="WHITE">WHITE</option>
+		</select></p>
+		<p>Controller ID: <input type="text" name="cntrlrid" ng-model="che.cntrlrid"></p>
 	</div>
 	<div class="modal-footer">
 		<button class="btn" ng-click="controller.cancel()">Cancel</button>
