DEV-548 Edit config dialog

--- a/src/html/partials/change-config.html
+++ b/src/html/partials/change-config.html
@@ -6,10 +6,10 @@
 	</div>
 	<div class="modal-body">
 		<div id='instructions'>
-			<h4>Parameter Name: {{domainobjectproperty.name}}</h4>
-			<h4>   Description: {{domainobjectproperty.description}}</h4>
+			<h5>Parameter Name: {{domainobjectproperty.name}}</h5>
+			<h5>   Description: {{domainobjectproperty.description}}</h5>
 			<!-- forcing separate lines on these instructions-->
-			<p>Enter new value</p>
+			<h5>Enter new value</h5>
 		</div>
 
 		<p>Value: <input type="text" name="value" ng-model="domainobjectproperty.value"></p>
