--- a/src/html/partials/change-config.html
+++ b/src/html/partials/change-config.html
@@ -5,6 +5,10 @@
 		<h3>Change Config Parameter</h3>
 	</div>
 	<div class="modal-body">
+		<div class="alert alert-danger" ng-repeat="globalError in response.errors.globalErrors">{{globalError.message}}</div>
+		<div class="alert alert-danger" ng-repeat="(field, fieldErrors) in response.errors.fieldErrors">
+			<div ng-repeat="fieldError in fieldErrors">{{fieldError.message}}</div>
+		</div>
 		<div id='instructions'>
 			<h5>Parameter Name: {{domainobjectproperty.name}}</h5>
 			<h5>   Description: {{domainobjectproperty.description}}</h5>
