--- a/src/html/partials/change-che.html
+++ b/src/html/partials/change-che.html
@@ -28,10 +28,12 @@
                 <option value="SETUP_ORDERS">SETUP ORDERS</option>
                 <option value="LINE_SCAN">LINE SCAN</option>
         </select></p>
-		
+
 	</div>
 	<div class="modal-footer">
 		<button class="btn" ng-click="controller.cancel()">Cancel</button>
-		<button class="btn btn-primary" ng-click="controller.ok()">Save</button>
+        <span ng-switch="mode">
+		  <button ng-switch-when="edit" class="btn btn-primary" ng-click="controller.edit()">Save</button>		  <button ng-switch-when="add" class="btn btn-primary" ng-click="controller.add()">Add</button>
+        </ngSwitch>
 	</div>
 </form>
