--- a/src/html/partials/tier-set-poscons.html
+++ b/src/html/partials/tier-set-poscons.html
@@ -15,14 +15,14 @@
         <div class="form-group">
             <label class="col-sm-4 control-label">Start Index:</label>
             <div class="col-sm-4">
-                <input type="text" class='form-control' ng-model="startIndex"/>
+                <input type="text" class='form-control' ng-model="poscon.startIndex"/>
             </div>
             <div class="col-sm-4 control-label"></div>
-        </div>    
+        </div>
         <div class="form-group">
             <label class="col-sm-4 control-label">Reverse Order:</label>
             <div class="col-sm-4">
-            	<input type="checkbox" name="reverse" ng-model="reverse"/>
+            	<input type="checkbox" name="reverse" ng-model="poscon.reverse"/>
             </div>
             <div class="col-sm-4"></div>
         </div>
