DEV-732 Added primarySiteControllerId to the edit facility feature

--- a/src/html/partials/set-facility-name.html
+++ b/src/html/partials/set-facility-name.html
@@ -17,6 +17,7 @@
 
 		<p>Domain ID: <input type="text" name="input" ng-model="facility.domainId"></p>
 		<p>Facility Full Name: <input type="text" name="input" ng-model="facility.description"></p>
+		<p>Primary Site Controller ID: <input type="text" name="input" ng-model="facility.primarySiteControllerId"></p>
 		<p>Primary Radio Channel: <input type="text" name="input" ng-model="facility.primaryChannel"></p>
 	</div>
 
