DEV-745 Initial prototype of user management functionality

--- a/src/companion/assets/css/app.styl
+++ b/src/companion/assets/css/app.styl
@@ -2,7 +2,7 @@
 
 @import '~bootstrap/dist/css/bootstrap.css'
 @import '~inspinia/css/style.css'
-
+@import '~inspinia/styl/variables.styl'
 
 // http://phonegap-tips.com/articles/essential-phonegap-css-webkit-tap-highlight-color.html
 *
@@ -12,3 +12,5 @@
 *, ::after, ::before
   box-sizing border-box
 
+.modal-header.bg-primary
+  background-color: $primary
