DEV-757 Facility Routes added Navigation minimize available

--- a/src/companion/assets/css/app.styl
+++ b/src/companion/assets/css/app.styl
@@ -14,3 +14,8 @@
 
 .modal-header.bg-primary
   background-color: $primary
+
+//when react-fa is in use with inspinia specifically keep spans with fa
+body.mini-navbar .navbar-default .nav li a span.fa {
+  display: block;
+}
