DEV-757 Select facility and switch the url to use the new facility

--- a/src/companion/pages/App/Facility/navigation.styl
+++ b/src/companion/pages/App/Facility/navigation.styl
@@ -1,3 +1,11 @@
-.nav > li > a span.fa {
+.nav a span.fa {
      margin-right: 0.5em;
 }
+
+.navbar-default .facility-dropdown button
+   &:hover 
+       color: #fff;
+       text-decoration: none;
+   &:focus 
+       color: #fff;
+       text-decoration: none;
