Expand the navigation text

--- a/src/companion/assets/css/app.styl
+++ b/src/companion/assets/css/app.styl
@@ -17,6 +17,10 @@
 .modal-header.bg-primary
   background-color: $primary
 
+.page-sidebar .sidebar-menu .menu-items > li > a > .title {
+   width: 100%;
+}
+
 .table.table-hover tbody tr:hover > td {
   background: #daeffd !important;
 }
