Move required asterisk from right side of input to the label

--- a/src/companion/assets/css/app.styl
+++ b/src/companion/assets/css/app.styl
@@ -38,3 +38,8 @@
  background: #fff !important;
 }
 
+.form-group-default label.required:after {
+  color: #f55753;
+  content: " *";
+  font-family: arial;
+}
