DEV-945 Single cell selection for pivot table

--- a/src/companion/pages/App/Orders/PivotTable.less
+++ b/src/companion/pages/App/Orders/PivotTable.less
@@ -1,5 +1,9 @@
 @import "~orb/dist/orb.css";
 
+.orb .cell.selected {
+    background-color: #daeffd!important;
+}
+
 .orb .inner-table .header {
     position: relative;
     display: table-cell;
