DEV-945 Match the font to the rest of the web site

--- a/src/companion/pages/App/Orders/PivotTable.less
+++ b/src/companion/pages/App/Orders/PivotTable.less
@@ -1,10 +1,22 @@
 @import "~orb/dist/orb.css";
 
+
 .orb .cell.selected {
     background-color: #daeffd!important;
 }
 
+.orb .flds-grp-cap {
+    font-family: 'Montserrat';
+    text-transform: uppercase;
+}
+
+.orb .caption {
+    font-family: 'Montserrat';
+    text-transform: uppercase;
+}
+
 .orb .inner-table .header {
+    font-family: 'Montserrat';
     position: relative;
     display: table-cell;
     height: initial;
