DEV-951 hide filtering from pivot tables

--- a/src/companion/pages/App/Orders/PivotTable.less
+++ b/src/companion/pages/App/Orders/PivotTable.less
@@ -1,5 +1,8 @@
 @import "~orb/dist/orb.css";
 
+.orb .filter {
+  display: none;
+}
 
 .orb .cell.selected {
     background-color: #daeffd!important;
