Prevent user select of cell data when double clicked

--- a/src/companion/pages/App/Orders/PivotTable.less
+++ b/src/companion/pages/App/Orders/PivotTable.less
@@ -28,4 +28,8 @@
 
 .orb .cell {
     cursor: pointer;
+    -webkit-user-select: none;  /* Chrome all / Safari all */
+    -moz-user-select: none;     /* Firefox all */
+    -ms-user-select: none;      /* IE 10+ */
+    user-select: none;          /* Likely future */
 }
