Add a small border to table cell headers on right and left side

--- a/src/companion/assets/css/app.styl
+++ b/src/companion/assets/css/app.styl
@@ -21,6 +21,17 @@
    width: 100%;
 }
 
+.table th {
+
+  border-left-color: rgba(230, 230, 230, 0.701961);
+  border-left-style: solid;
+  border-left-width: 1px;
+
+  border-right-color: rgba(230, 230, 230, 0.701961);
+  border-right-style: solid;
+  border-right-width: 1px;
+}
+
 .table.table-hover tbody tr:hover > td {
   background: #daeffd !important;
 }
