Add refresh feedback for ibox in orders

--- a/src/companion/assets/css/app.styl
+++ b/src/companion/assets/css/app.styl
@@ -21,6 +21,11 @@
    width: 100%;
 }
 
+.portlet-progress > .progress-circle-indeterminate,
+.portlet-progress > .portlet-bar-indeterminate {
+   top: 10em;
+}
+
 .table th {
 
   border-left-color: rgba(230, 230, 230, 0.701961);
