Added the "Palletizer" CHE mode

--- a/src/html/partials/change-che.html
+++ b/src/html/partials/change-che.html
@@ -27,6 +27,7 @@
         <p>Process Mode: <select name="processMode" ng-model="che.processMode">
                 <option value="SETUP_ORDERS">SETUP ORDERS</option>
                 <option value="LINE_SCAN">LINE SCAN</option>
+                <option value="PALLETIZER">PALLETIZER</option>
         </select></p>
 
 	</div>
