DEV-743 Added an animation when a new table row is added

--- a/src/companion/assets/css/app.styl
+++ b/src/companion/assets/css/app.styl
@@ -59,3 +59,12 @@
   content: " *";
   font-family: arial;
 }
+
+.newrow-enter > td {
+    opacity: 0.1;
+}
+
+.newrow-enter.newrow-enter-active > td {
+  opacity: 1;
+  transition: opacity 1s cubic-bezier(0.68, -0.55, 0.27, 1.55)
+}
