Better spacing for file input within form control (observe in imports)

--- a/src/companion/assets/css/app.styl
+++ b/src/companion/assets/css/app.styl
@@ -68,3 +68,7 @@
   opacity: 1;
   transition: opacity 1s cubic-bezier(0.68, -0.55, 0.27, 1.55)
 }
+
+input[type="file"].form-control {
+  margin-top: .10em;
+}
