DEV-1063 Added CHE scanner type

--- a/src/html/partials/change-che.html
+++ b/src/html/partials/change-che.html
@@ -29,6 +29,11 @@
                 <option value="LINE_SCAN">LINE SCAN</option>
                 <option value="PALLETIZER">PALLETIZER</option>
         </select></p>
+        <p>Scanner Type: <select name="scannerType" ng-model="che.scannerType">
+                <option value="ORIGINALSERIAL">ORIGINAL SERIAL</option>
+                <option value="CODECORPS3600">CODECORPS 3600</option>
+        </select></p>
+        
 
 	</div>
 	<div class="modal-footer">
