Better data table padding

--- a/src/companion/assets/css/app.styl
+++ b/src/companion/assets/css/app.styl
@@ -54,6 +54,13 @@
  background: #fff !important;
 }
 
+.table.dataTable tbody tr td {
+ padding-top: 0.25em;
+ padding-bottom: 0.25em;
+ padding-left: 0.5em;
+ padding-right: 0.5em;
+}
+
 .form-group-default label.required:after {
   color: #f55753;
   content: " *";
