--- a/src/companion/assets/css/app.styl
+++ b/src/companion/assets/css/app.styl
@@ -1,8 +1,8 @@
 // Remember to use rems and ems. http://css-tricks.com/rems-ems.
 
-@import '~bootstrap/dist/css/bootstrap.css'
-@import '~pages/css/pages-icons.css'
-@import '~pages/css/pages.css'
+//@import '~bootstrap/dist/css/bootstrap.css'
+//@import '~pages/css/pages-icons.css'
+//@import '~pages/css/pages.css'
 //@import '~inspinia/styl/variables.styl'
 
 
