--- a/web_modules/pages/less/pages.less
+++ b/web_modules/pages/less/pages.less
@@ -45,8 +45,8 @@ Generated From LESS
 // Responsive Util
 @import "responsive";
 
-//Change your theme here 
-@theme-name:"default";
+//Change your theme here
+@theme-name:"codeshelf";
 
 .theme {
     @import "themes/@{theme-name}/theme";
