--- a/web_modules/pages/less/modules/alerts.less
+++ b/web_modules/pages/less/modules/alerts.less
@@ -1,4 +1,3 @@
-
 /*------------------------------------------------------------------
 [7. Alerts]
 */
@@ -34,7 +33,7 @@
         }
     }
     .close {
-        background: url("../img/icons/noti-cross.png") no-repeat scroll 0 0 transparent;
+        background: url("@{base-img-url}/icons/noti-cross.png") no-repeat scroll 0 0 transparent;
         background-position: -9px -10px;
         width: 10px;
         height: 9px;
@@ -47,13 +46,13 @@
             opacity: 1;
         }
     }
-    
+
 }
 
 /* Alert : Color Options
 ------------------------------------
 */
-.alert-danger, 
+.alert-danger,
 .alert-error{
     background-color: @color-danger-lighter;
     color: @color-danger-darker;
