Tab color using dark codeshelf orange

--- a/src/companion/assets/css/app.styl
+++ b/src/companion/assets/css/app.styl
@@ -6,6 +6,7 @@
 //@import '~inspinia/styl/variables.styl'
 
 
+
 // http://phonegap-tips.com/articles/essential-phonegap-css-webkit-tap-highlight-color.html
 *
   -webkit-tap-highlight-color rgba(0,0,0,0)
@@ -130,7 +131,7 @@ input[type="file"].form-control {
   -webkit-backface-visibility: hidden;
   width: 100%;
   display: block;
-  background-color: #f55753;
+  background-color: #e06145;
   height: 0px;
   content: '';
   z-index: 125;
