DEV-1404 Worker on Tier LED offset UX dialog

--- a/src/html/partials/change-slot-leds.html
+++ b/src/html/partials/change-slot-leds.html
@@ -1,6 +1,4 @@
-<!-- change-che-description.html file
--->
-<form name="che-form">
+<form name="slot-leds-form">
 	<div class="modal-header">
 		<h3>Adjust Slot LEDs</h3>
 	</div>
