DEV-1404 Worked on LED offset dialog

--- a/src/html/partials/change-tier-leds.html
+++ b/src/html/partials/change-tier-leds.html
@@ -11,7 +11,7 @@
 		<p><input type="text" name="offset" ng-model="tier.offset"></p>
 	</div>
 	<div class="modal-footer">
-		<button class="btn" ng-click="controller.close()">Cancel</button>
-		<button class="btn btn-primary" ng-click="controller.ok()">Save</button>
+		<button class="btn" ng-click="controller.cancel()">Cancel</button>
+		<button class="btn btn-primary" ng-click="controller.setLedOffset()">Save</button>
 	</div>
 </form>
