--- a/src/companion/pages/Mobile/Detail/Detail.styl
+++ b/src/companion/pages/Mobile/Detail/Detail.styl
@@ -16,17 +16,43 @@ dd {
 }
 
 dl.inline {
-  margin-bottom: .83em;
+   margin-bottom: .83em;
+  dd {
+    display: inline;
+  }
+  dd:after{
+    display: block;
+    content: '';
+  }
+  dt{
+    display: inline-block;
+    margin-right: 1em;
+  }
 }
 
-dl.inline dd {
-  display: inline;
-}
-dl.inline dd:after{
-  display: block;
-  content: '';
-}
-dl.inline dt{
-  display: inline-block;
-  margin-right: 1em;
+div.searchResult {
+  display: table;
+  table-layout: fixed;
+  height: 100%;
+  > div {
+    display: table-cell;
+    float: none;
+    height: 100%;
+  }
+
+  div.verticalCenter {
+    vertical-align: middle;
+    padding-left: 30px;
+    padding-right: 0px;
+  }
+
+  dl {
+    margin-bottom: 0em;
+    dt {
+      font-size: 125%
+    }
+    dd {
+      font-size: 80%
+    }
+  }
 }
