DEV-1433 Worked on better UX errors for Tier and Slot LED offset editing

--- a/src/html/partials/change-tier-leds.html
+++ b/src/html/partials/change-tier-leds.html
@@ -3,7 +3,9 @@
 		<h3>Tier LED Offset</h3>
 	</div>
 	<div class="modal-body">
-      	<div class="alert alert-danger" ng-repeat="msg in tierLedForm.messages">{{msg}}</div>
+      	<div class="alert alert-danger" ng-repeat="(field, fieldErrors) in response.errors.fieldErrors">
+			<div ng-repeat="fieldError in fieldErrors">{{fieldError.message}}</div>
+		</div>
 		<div id='instructions'>
 			<!-- forcing separate lines on these instructions-->
 			<p>Enter LED Offset for Tier {{tier.nominalLocationId}}.</p>
