--- a/src/html/partials/change-slot-leds.html
+++ b/src/html/partials/change-slot-leds.html
@@ -3,7 +3,9 @@
 		<h3>Adjust Slot LEDs</h3>
 	</div>
 	<div class="modal-body">
-      	<div class="alert alert-danger" ng-repeat="msg in slotLedForm.messages">{{msg}}</div>
+      	<div class="alert alert-danger" ng-repeat="(field, fieldErrors) in response.errors.fieldErrors">
+			<div ng-repeat="fieldError in fieldErrors">{{fieldError.message}}</div>
+		</div>
 		<div id='instructions'>
 			<!-- forcing separate lines on these instructions-->
 			<p>Adjust First and Last LED for this slot.</p>
