Show the current context facility on the top of the page

--- a/src/companion/assets/css/app.styl
+++ b/src/companion/assets/css/app.styl
@@ -188,3 +188,12 @@ input[type="file"].form-control {
 .nav-tabs-simple.nav-tabs-right ul > li:after {
   left: 0;
 }
+
+.pull-center {
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 100%;
+  display: table;
+   z-index: 1;
+}
